--- a/1_Preprocessing_of_Training_Data.ipynb
+++ b/1_Preprocessing_of_Training_Data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Obtain training data and separate out a High S/N Test set\n",
+    "# Obtammmin training data and separate out a High S/N Test set\n",
     "\n",
     "## This notebook takes you through the steps of how to preprocess the training data into the form necessary for training StarNet\n",
     "## downloading apStar_visits_main.h5 is necessary before beginning this procedure (shown below)\n",
