--- a/1_Preprocessing_of_Training_Data.ipynb
+++ b/1_Preprocessing_of_Training_Data.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Download apStar visits data file"
+    "# Download apStar visits data file (~38GB)"
    ]
   },
   {
