--- a/1_Download_Data.ipynb
+++ b/1_Download_Data.ipynb
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. training_set.h5\n",
+    "## 4. training_data.h5\n",
     "### description: \n",
     "### This file contains apStar individual visit spectra along with APOGEE data associated with each star that is used for the training of your model\n",
     "### size: 1.4GB\n",
