--- a/1_Download_Data.ipynb
+++ b/1_Download_Data.ipynb
@@ -148,7 +148,7 @@
    },
    "outputs": [],
    "source": [
-    "filename='training_set.h5'\n",
+    "filename='training_data.h5'\n",
     "vclient = vos.Client()\n",
     "vclient.copy('vos:starnet/public/'+filename, filename)"
    ]
