--- a/4_Train_Model_Keras_1.ipynb
+++ b/4_Train_Model_Keras_1.ipynb
@@ -6,19 +6,23 @@
    "source": [
     "# Train Model\n",
     "\n",
-    "## This notebook takes you through the steps of how to train a StarNet Model\n",
+    "This notebook takes you through the steps of how to train a StarNet Model\n",
     "\n",
     "## required packages:\n",
-    "### - numpy\n",
-    "### - h5py\n",
-    "### - random\n",
-    "### - Keras 1 (for Keras 2 users, see $3\\_Train\\_Model\\_Keras\\_2.ipynb$)\n",
-    "### - Tensorflow or Theano (backend for Keras)\n",
-    "#### - NOTE: for error propagation, the model must be trained with Theano as the backend, although this has been found to be much slower without the proper set-up of Theano\n",
+    "- numpy\n",
+    "- h5py\n",
+    "- random\n",
+    "- Keras 1\n",
+    "  - for Keras 2 users, see $3\\_Train\\_Model\\_Keras\\_2.ipynb$\n",
+    "- Tensorflow or Theano (backend for Keras)\n",
+    "\n",
+    "NOTE: for error propagation, the model must be trained with Theano as the backend, although this has been found to be much slower without the proper set-up of Theano\n",
     "\n",
     "## required data files:\n",
-    "### - training_data.h5 (can be created in $2\\_Preprocessing\\_of\\_Training\\_Data.ipynb$ or downloaded  in $1\\_Download\\_Data.ipynb$)\n",
-    "### - mean_and_std.npy (can be created in $3\\_Preprocessing\\_of\\_Test\\_Data.ipynb$ or downloaded in $1\\_Download\\_Data.ipynb$)"
+    "- training_data.h5\n",
+    "  - can be created in $2\\_Preprocessing\\_of\\_Training\\_Data.ipynb$ or downloaded  in $1\\_Download\\_Data.ipynb$\n",
+    "- mean_and_std.npy\n",
+    "  - can be created in $3\\_Preprocessing\\_of\\_Test\\_Data.ipynb$ or downloaded in $1\\_Download\\_Data.ipynb$"
    ]
   },
   {
@@ -53,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Obtain data for normalizing labels"
+    "## Load data for normalizing labels"
    ]
   },
   {
@@ -75,7 +79,7 @@
    "metadata": {},
    "source": [
     "## Define function to normalize labels to approximately have a mean of zero and unit variance\n",
-    "### NOTE: this is necessary to put output labels on a similar scale in order for the model to train properly, this process is reversed in the test stage to give the output labels their proper units"
+    "NOTE: this is necessary to put output labels on a similar scale in order for the model to train properly, this process is reversed in the test stage to give the output labels their proper units"
    ]
   },
   {
@@ -94,12 +98,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Obtain reference set"
+    "## Obtain reference set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -157,9 +161,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Shuffle spectra and labels (to randomize order for proper training) then split the reference set into training and cross-validation sets\n",
-    "## Default:\n",
-    "### - $num\\_train$ = 45000 spectra"
+    "# Randomize order and separate into training and CV sets\n",
+    "This is done to randomize order for proper training\n",
+    "The data is then split the reference set into training and cross-validation sets\n",
+    "### Default:\n",
+    "- $num\\_train$ = 45000 spectra"
    ]
   },
   {
@@ -266,11 +272,11 @@
    },
    "source": [
     "# Build Model Architecture:\n",
-    "### - input layer\n",
-    "### - 2 convolutional layers\n",
-    "### - 1 maxpooling layer followed by flattening for the fully connected layer\n",
-    "### - 2 fully connected layers\n",
-    "### - output layer"
+    "- input layer\n",
+    "- 2 convolutional layers\n",
+    "- 1 maxpooling layer followed by flattening for the fully connected layer\n",
+    "- 2 fully connected layers\n",
+    "- output layer"
    ]
   },
   {
@@ -306,9 +312,9 @@
    "metadata": {},
    "source": [
     "## More model techniques:\n",
-    "### The $Adam$ optimizer is the gradient descent algorithm used for minimizing the loss function\n",
-    "### $EarlyStopping$ uses the cross-validation set to test the model following every iteration and stops the training if the cv loss does not decrease by $min\\_delta$ after $patience$ iterations\n",
-    "### $ReduceLROnPlateau$ is a form of learning rate decay where the learning rate is decreased by a factor of $factor$ if the training loss does not decrease by $epsilon$ after $patience$ iterations unless the learning rate has reached $min\\_lr$"
+    "- The $Adam$ optimizer is the gradient descent algorithm used for minimizing the loss function\n",
+    "- $EarlyStopping$ uses the cross-validation set to test the model following every iteration and stops the training if the cv loss does not decrease by $min\\_delta$ after $patience$ iterations\n",
+    "- $ReduceLROnPlateau$ is a form of learning rate decay where the learning rate is decreased by a factor of $factor$ if the training loss does not decrease by $epsilon$ after $patience$ iterations unless the learning rate has reached $min\\_lr$"
    ]
   },
   {
@@ -349,8 +355,8 @@
    "metadata": {},
    "source": [
     "# compile model\n",
-    "## Default loss function:\n",
-    "### loss_function = mean squared error"
+    "### Default loss function:\n",
+    "- loss_function = mean squared error"
    ]
   },
   {
