--- a/2_Preprocessing_of_Training_Data.ipynb
+++ b/2_Preprocessing_of_Training_Data.ipynb
@@ -5,18 +5,18 @@
    "metadata": {},
    "source": [
     "# Obtain training data and separate out a High S/N Test set\n",
-    "\n",
-    "## This notebook takes you through the steps of how to preprocess the training data into the form necessary for training StarNet\n",
+    "This notebook takes you through the steps of how to preprocess the training data into the form necessary for training StarNet\n",
     "## required packages:\n",
-    "### - numpy\n",
-    "### - h5py\n",
+    "- numpy\n",
+    "- h5py\n",
     "## required data files:\n",
-    "### - apStar_visits_main.h5 (can be downloaded in $1\\_Download\\_Data.ipynb$)"
+    "- apStar_visits_main.h5\n",
+    "  - can be downloaded in $1\\_Download\\_Data.ipynb$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -31,12 +31,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load apStar_visits_main.h5, a file that contains individual visit spectra along with APOGEE data associated with each star.  File can be downloaded in $1\\_Download\\_Data.ipynb$"
+    "## Load apStar_visits_main.h5 \n",
+    "a file that contains individual visit spectra along with APOGEE data associated with each star.  File can be downloaded in $1\\_Download\\_Data.ipynb$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -121,12 +122,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### For the training of StarNet, it is only necessary to obtain the spectra and labels, but we need to set restrictions on the training set to obtain the labels of highest validity so we will first include the $APOGEE\\_IDs$, the spectra, the $S/N$ of the combined spectra, $T_{\\mathrm{eff}}$, $\\log(g)$,  $[Fe/H]$,  $V_{scatter}$,  $STARFLAGs$, and $ASPCAPFLAGs$"
+    "For the training of StarNet, it is only necessary to obtain the spectra and labels, but we need to set restrictions on the training set to obtain the labels of highest validity so we will first include the $APOGEE\\_IDs$, the spectra, the $S/N$ of the combined spectra, $T_{\\mathrm{eff}}$, $\\log(g)$,  $[Fe/H]$,  $V_{scatter}$,  $STARFLAGs$, and $ASPCAPFLAGs$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -161,18 +162,18 @@
    "source": [
     "# Separate out a dataset with good labels:\n",
     "## Default restrictions:\n",
-    "### - combined spectral S/N $\\geq$ 200\n",
-    "### - STARFLAG = 0\n",
-    "### - ASPCAPFLAG = 0\n",
-    "### - 4000K < $T_{\\mathrm{eff}}$ < 5500K\n",
-    "### - -3.0 dex < $[Fe/H]$\n",
-    "### - $\\log(g)$ $\\neq$ -9999. (value defined by ASPCAP when no ASPCAP labels are given)\n",
-    "### -$V_{scatter}$ < 1.0 km/s"
+    "- combined spectral S/N $\\geq$ 200\n",
+    "- STARFLAG = 0\n",
+    "- ASPCAPFLAG = 0\n",
+    "- 4000K < $T_{\\mathrm{eff}}$ < 5500K\n",
+    "- -3.0 dex < $[Fe/H]$\n",
+    "- $\\log(g)$ $\\neq$ -9999. (value defined by ASPCAP when no ASPCAP labels are given)\n",
+    "- $V_{scatter}$ < 1.0 km/s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -217,13 +218,13 @@
    "metadata": {},
    "source": [
     "## Select the first $num\\_train$ visits for the reference set (later to be split into training and cross-validation sets)\n",
-    "### default:\n",
-    "#### - num_train = 50000"
+    "### Default number reference spectra:\n",
+    "- num_ref = 50000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -232,18 +233,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reference set includes 50000 individual visit spectra from 17841 stars\n"
+      "Reference set includes 50000 individual visit spectra from 17841 stars.\n"
      ]
     }
    ],
    "source": [
-    "num_train = 50000\n",
+    "num_ref = 50000\n",
     "\n",
-    "ap_id_train = ap_id[0:num_train]\n",
-    "spectra = spectra[0:num_train]\n",
-    "teff = teff[0:num_train]\n",
-    "logg = logg[0:num_train]\n",
-    "fe_h = fe_h[0:num_train]\n",
+    "ap_id_train = ap_id[0:num_ref]\n",
+    "spectra = spectra[0:num_ref]\n",
+    "teff = teff[0:num_ref]\n",
+    "logg = logg[0:num_ref]\n",
+    "fe_h = fe_h[0:num_ref]\n",
     "\n",
     "print('Reference set includes '+str(len(ap_id_train))+' individual visit spectra from '+str(len(set(ap_id_train)))+' stars.')\n"
    ]
@@ -252,13 +253,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Separate a test set of $APOGEE\\_IDs$ to be processed in $3\\_Preprocessing\\_of\\_Test\\_Data.ipynb$ as StarNet's $High\\_S/N\\_Test\\_Set$\n",
-    "## make sure there are no duplicates from test set that are also in training set (this is necessary because there are some duplicates in the APOGEE v603.fits file)"
+    "# Separate a test set of $APOGEE\\_IDs$ \n",
+    "- These APOGEE IDs will be processed in $3\\_Preprocessing\\_of\\_Test\\_Data.ipynb$ to create StarNet's $High\\_S/N\\_Test\\_Set$\n",
+    "- Make sure there are no duplicates from test set that are also in training set (this is necessary because there are some duplicates in the APOGEE v603.fits file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -267,7 +269,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4932 stars to be processed for the High S/N test set\n"
+      "4932 stars to be processed for the High S/N test set.\n"
      ]
     }
    ],
@@ -287,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -296,7 +298,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "APOGEE IDs for the high S/N test set are saved to be used in 2_Preprocessing_of_Test_Data.ipynb\n"
+      "APOGEE IDs for the high S/N test set are saved to be used in 3_Preprocessing_of_Test_Data.ipynb\n"
      ]
     }
    ],
@@ -317,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -334,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -376,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +387,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training_data.h5 has been saved as the reference set to be used in 3_Train_Model.ipynb\n"
+      "training_data.h5 has been saved as the reference set to be used in 4_Train_Model.ipynb\n"
      ]
     }
    ],
