--- a/3_Preprocessing_of_Test_Data.ipynb
+++ b/3_Preprocessing_of_Test_Data.ipynb
@@ -6,18 +6,20 @@
    "source": [
     "# Obtain test data\n",
     "\n",
-    "## This notebook takes you through the steps of how to preprocess a high S/N and low S/N test set\n",
+    "This notebook takes you through the steps of how to preprocess a high S/N and low S/N test set\n",
     "\n",
     "## required packages:\n",
-    "### - numpy\n",
-    "### - h5py\n",
+    "- numpy\n",
+    "- h5py\n",
+    "\n",
     "## required data files:\n",
-    "### - apStar_combined_main.h5 (can be downloaded in $1\\_Download\\_Data.ipynb$)"
+    "- apStar_combined_main.h5\n",
+    "  - can be downloaded in $1\\_Download\\_Data.ipynb$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -32,28 +34,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load apStar_combined_main.h5, a file that contains combined spectra along with APOGEE data associated with each star. File can be downloaded in $1\\_Download\\_Data.ipynb$"
+    "## Load apStar_combined_main.h5 \n",
+    "a file that contains combined spectra along with APOGEE data associated with each star. File can be downloaded in $1\\_Download\\_Data.ipynb$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "filename = '/data/stars/teaghan/apStar_combined_main.h5'\n",
+    "filename = 'apStar_combined_main.h5'\n",
     "f = h5py.File(filename,\"r\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset keys in file: \n",
+      "\n",
+      "0_H\n",
+      "0_H_ERR\n",
+      "ALPHA_M\n",
+      "AL_H\n",
+      "AL_H_ERR\n",
+      "CA_H\n",
+      "CA_H_ERR\n",
+      "C_H\n",
+      "C_H_ERR\n",
+      "FE_H\n",
+      "FE_H_ERR\n",
+      "IDs\n",
+      "K_H\n",
+      "K_H_ERR\n",
+      "LOGG\n",
+      "LOGG_ERR\n",
+      "MG_H\n",
+      "MG_H_ERR\n",
+      "MN_H\n",
+      "MN_H_ERR\n",
+      "NA_H\n",
+      "NA_H_ERR\n",
+      "NI_H\n",
+      "NI_H_ERR\n",
+      "N_H\n",
+      "N_H_ERR\n",
+      "SI_H\n",
+      "SI_H_ERR\n",
+      "S_H\n",
+      "S_H_ERR\n",
+      "TEFF\n",
+      "TEFF_ERR\n",
+      "TI_H\n",
+      "TI_H_ERR\n",
+      "VRAD\n",
+      "VRAD_ERR\n",
+      "VSCATTER\n",
+      "V_H\n",
+      "V_H_ERR\n",
+      "aspcap_flag\n",
+      "error_spectrum\n",
+      "num_visits\n",
+      "spectrum\n",
+      "stacked_snr\n",
+      "star_flag\n",
+      "targ1_flag\n",
+      "targ2_flag\n"
+     ]
+    }
+   ],
    "source": [
     "print('Dataset keys in file: \\n')\n",
     "for i in f.keys(): print i"
@@ -63,16 +122,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### For the testing of StarNet, it is necessary to obtain the spectra, error spectra, combined S/N, and labels, but we need to make eliminations to the test set to obtain the labels of highest validity to compare with, so we will first include the $APOGEE\\_IDs$, the spectra, error spectra, the $S/N$ of the combined spectra, $T_{\\mathrm{eff}}$, $\\log(g)$, $[Fe/H]$, $V_{scatter}$, $STARFLAGs$, and $ASPCAPFLAGs$"
+    "For the testing of StarNet, it is necessary to obtain the spectra, error spectra, combined S/N, and labels, but we need to make eliminations to the test set to obtain the labels of highest validity to compare with, so we will first include the $APOGEE\\_IDs$, the spectra, error spectra, the $S/N$ of the combined spectra, $T_{\\mathrm{eff}}$, $\\log(g)$, $[Fe/H]$, $V_{scatter}$, $STARFLAGs$, and $ASPCAPFLAGs$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Obtainined spectra and data for 142333 stars.\n"
+     ]
+    }
+   ],
    "source": [
     "ap_id = f['IDs'][:,0]\n",
     "\n",
@@ -96,16 +163,24 @@
    "metadata": {},
    "source": [
     "## Create a file that contains the mean and std for $T_{\\mathrm{eff}}$, $\\log(g)$, and  $[Fe/H]$ in order to normalize labels during training and testing\n",
-    "#### ignore values equal to -9999."
+    "ignore values equal to -9999."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean_and_std.npy saved\n"
+     ]
+    }
+   ],
    "source": [
     "mean = np.array([np.mean(teff[teff!=-9999.]),np.mean(logg[logg!=-9999.]),np.mean(fe_h[fe_h!=-9999.])])\n",
     "std = np.array([np.std(teff[teff!=-9999.]),np.std(logg[logg!=-9999.]),np.std(fe_h[fe_h!=-9999.])])\n",
@@ -120,18 +195,18 @@
    "metadata": {},
    "source": [
     "# Separate out a dataset with good labels\n",
-    "## Default initial restrictions:\n",
-    "### - $STARFLAGs$ = 0\n",
-    "### -  $ASPCAPFLAGs$ = 0\n",
-    "### - 4000K < $T_{\\mathrm{eff}}$ < 5500K\n",
-    "### - -3.0 < $[Fe/H]$\n",
-    "### - $\\log(g)$ $\\neq$ -9999. (value defined by ASPCAP when no ASPCAP labels are given)\n",
-    "### - $V_{scatter}$ < 1.0 km/s"
+    "### Default initial restrictions:\n",
+    "- $STARFLAGs$ = 0\n",
+    "- $ASPCAPFLAGs$ = 0\n",
+    "- 4000K < $T_{\\mathrm{eff}}$ < 5500K\n",
+    "- -3.0 < $[Fe/H]$\n",
+    "- $\\log(g)$ $\\neq$ -9999. (value defined by ASPCAP when no ASPCAP labels are given)\n",
+    "- $V_{scatter}$ < 1.0 km/s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -145,11 +220,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34484 stars remain.\n"
+     ]
+    }
+   ],
    "source": [
     "indices, cols = np.where((aspcapflag[:]==0.)&(starflag[:]==0.)&(vscatter[:]<vscatter_max)&(fe_h[:]>fe_h_min)&(teff[:]>teff_min)&(teff[:]<teff_max)&(logg[:]!=-9999.).reshape(len(ap_id),1))\n",
     "\n",
@@ -168,12 +251,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load APOGEE IDs for High S/N test set obtained in $2\\_Preprocessing\\_of\\_Training\\_Data.ipynb$ or downloaded from $1\\_Download\\_Data.ipynb$"
+    "## Load high_snr_test_apids.npy \n",
+    "A file that contains the APOGEE IDs for High S/N spectra that will be processed into the High S/N test set (file can be obtained in $2\\_Preprocessing\\_of\\_Training\\_Data.ipynb$ or downloaded from $1\\_Download\\_Data.ipynb$)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -191,11 +275,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "High S/N test set includes 3733 combined spectra\n"
+     ]
+    }
+   ],
    "source": [
     "indices = [i for i, item in enumerate(high_snr_test_ap_ids) if item in ap_id]\n",
     "\n",
@@ -224,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -241,11 +333,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "High S/N spectra dataset now contains 3733 spectra, each with 7214 wavelength bins\n"
+     ]
+    }
+   ],
    "source": [
     "# Separate spectra into chips\n",
     "\n",
@@ -279,11 +379,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "High S/N error spectra dataset now contains 3733 error spectra, each with 7214 wavelength bins\n"
+     ]
+    }
+   ],
    "source": [
     "# Separate error spectra into chips\n",
     "\n",
@@ -313,11 +421,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "high_snr_test_data.h5 has been saved as the High S/N test set to be used in 5_Test_Model.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "savename = 'high_snr_test_data.h5'\n",
     "# if path already exist, you must remove it first using os.remove(savename) \n",
@@ -349,13 +465,13 @@
    "metadata": {},
    "source": [
     "# Now create Low S/N test set\n",
-    "## default additional restrictions:\n",
-    "### - combined S/N < 200"
+    "### default additional restrictions:\n",
+    "- combined S/N < 200"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -366,11 +482,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Low S/N test set includes 17506 combined spectra\n"
+     ]
+    }
+   ],
    "source": [
     "indices, cols = np.where((combined_snr[:]<snr_max).reshape(len(ap_id),1))\n",
     "\n",
@@ -396,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -413,11 +537,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Low S/N spectra dataset now contains 17506 spectra, each with 7214 wavelength bins\n"
+     ]
+    }
+   ],
    "source": [
     "# Separate spectra into chips\n",
     "\n",
@@ -452,11 +584,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Low S/N error spectra dataset now contains 17506 error spectra, each with 7214 wavelength bins\n"
+     ]
+    }
+   ],
    "source": [
     "# Separate error spectra into chips\n",
     "\n",
@@ -488,15 +628,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "low_snr_test_data.h5 has been saved as the Low S/N test set to be used in 5_Test_Model.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "savename = 'low_snr_test_data.h5'\n",
     "# if path already exist, you must remove it first using os.remove(savename) \n",
-    "os.remove(savename)\n",
+    "#os.remove(savename)\n",
     "dt = h5py.special_dtype(vlen=bytes)\n",
     "with h5py.File(savename, \"a\") as f:\n",
     "     \n",
