--- a/4_Train_Model_Keras_2.ipynb
+++ b/4_Train_Model_Keras_2.ipynb
@@ -6,28 +6,39 @@
    "source": [
     "# Train Model\n",
     "\n",
-    "## This notebook takes you through the steps of how to train a StarNet Model\n",
+    "This notebook takes you through the steps of how to train a StarNet Model\n",
     "\n",
     "## required packages:\n",
-    "### - numpy\n",
-    "### - h5py\n",
-    "### - random\n",
-    "### - Keras 2 (for Keras 1 users, see $3\\_Train\\_Model\\_Keras\\_1.ipynb$)\n",
-    "### - Tensorflow or Theano (backend for Keras)\n",
-    "#### - NOTE: for error propagation, the model must be trained with Theano as the backend, although this has been found to be much slower without the proper set-up of Theano\n",
+    "- numpy\n",
+    "- h5py\n",
+    "- random\n",
+    "- Keras 2\n",
+    "  - for Keras 1 users, see $3\\_Train\\_Model\\_Keras\\_1.ipynb$\n",
+    "- Tensorflow or Theano\n",
+    "  - backend for Keras\n",
+    "\n",
+    "NOTE: for error propagation, the model must be trained with Theano as the backend, although this has been found to be much slower without the proper set-up of Theano\n",
     "\n",
     "## required data files:\n",
-    "### - training_data.h5 (can be created in $2\\_Preprocessing\\_of\\_Training\\_Data.ipynb$ or downloaded  in $1\\_Download\\_Data.ipynb$)\n",
-    "### - mean_and_std.npy (can be created in $3\\_Preprocessing\\_of\\_Test\\_Data.ipynb$ or downloaded in $1\\_Download\\_Data.ipynb$)"
+    "- training_data.h5\n",
+    "  - can be created in $2\\_Preprocessing\\_of\\_Training\\_Data.ipynb$ or downloaded  in $1\\_Download\\_Data.ipynb$\n",
+    "- mean_and_std.npy\n",
+    "  - can be created in $3\\_Preprocessing\\_of\\_Test\\_Data.ipynb$ or downloaded in $1\\_Download\\_Data.ipynb$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import random\n",
@@ -45,12 +56,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Obtain data for normalizing labels"
+    "## Load data for normalizing labels## Obtain data for normalizing labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -67,12 +78,12 @@
    "metadata": {},
    "source": [
     "## Define function to normalize labels to approximately have a mean of zero and unit variance\n",
-    "### NOTE: this is necessary to put output labels on a similar scale in order for the model to train properly, this process is reversed in the test stage to give the output labels their proper units"
+    "NOTE: this is necessary to put output labels on a similar scale in order for the model to train properly, this process is reversed in the test stage to give the output labels their proper units"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -86,12 +97,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Obtain reference set"
+    "## Obtain reference set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -102,11 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reference set includes 50000 individual visit spectra.\n"
+     ]
+    }
+   ],
    "source": [
     "with h5py.File(savename,\"r\") as F:\n",
     "    spectra = F[\"spectra\"][:]\n",
@@ -118,11 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Each spectra contains 7214 wavelength bins\n"
+     ]
+    }
+   ],
    "source": [
     "# define the number of wavelength bins (typicall 7214)\n",
     "num_fluxes = spectra.shape[1]\n",
@@ -133,14 +156,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Shuffle spectra and labels (to randomize order for proper training) then split the reference set into training and cross-validation sets\n",
-    "## Default:\n",
-    "### - $num\\_train$ = 45000 spectra"
+    "# Randomize order and separate into training and CV sets\n",
+    "This is done to randomize order for proper training\n",
+    "The data is then split the reference set into training and cross-validation sets\n",
+    "### Default:\n",
+    "- $num\\_train$ = 45000 spectra"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -151,11 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set includes 45000 spectra and the cross-validation set includes 5000 spectra\n"
+     ]
+    }
+   ],
    "source": [
     "reference_data = np.column_stack((spectra,labels))\n",
     "np.random.shuffle(reference_data)\n",
@@ -181,10 +212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# activation function used following every layer except for the output layers\n",
@@ -229,24 +258,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# Build Model Architecture:\n",
-    "### - input layer\n",
-    "### - 2 convolutional layers\n",
-    "### - 1 Maxpooling layer followed by flattening for the fully connected layer\n",
-    "### - 2 fully connected layers\n",
-    "### - output layer"
+    "- input layer\n",
+    "- 2 convolutional layers\n",
+    "- 1 maxpooling layer followed by flattening for the fully connected layer\n",
+    "- 2 fully connected layers\n",
+    "- output layer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential([\n",
@@ -274,20 +299,22 @@
    "metadata": {},
    "source": [
     "## More model techniques:\n",
-    "### The $Adam$ optimizer is the gradient descent algorithm used for minimizing the loss function\n",
-    "### $EarlyStopping$ uses the cross-validation set to test the model following every iteration and stops the training if the cv loss does not decrease by $min\\_delta$ after $patience$ iterations\n",
-    "### $ReduceLROnPlateau$ is a form of learning rate decay where the learning rate is decreased by a factor of $factor$ if the training loss does not decrease by $epsilon$ after $patience$ iterations unless the learning rate has reached $min\\_lr$"
+    "- The $Adam$ optimizer is the gradient descent algorithm used for minimizing the loss function\n",
+    "- $EarlyStopping$ uses the cross-validation set to test the model following every iteration and stops the training if the cv loss does not decrease by $min\\_delta$ after $patience$ iterations\n",
+    "- $ReduceLROnPlateau$ is a form of learning rate decay where the learning rate is decreased by a factor of $factor$ if the training loss does not decrease by $epsilon$ after $patience$ iterations unless the learning rate has reached $min\\_lr$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "early_stopping_min_delta = 0.0001\n",
+    "# compile model\n",
+    "## Default loss function:\n",
+    "## loss_function = mean squared errorearly_stopping_min_delta = 0.0001\n",
     "early_stopping_patience = 4\n",
     "reduce_lr_factor = 0.5\n",
     "reuce_lr_epsilon = 0.0009\n",
@@ -297,10 +324,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "optimizer = Adam(lr=lr, beta_1=beta_1, beta_2=beta_2, epsilon=optimizer_epsilon, decay=0.0)\n",
@@ -317,13 +342,13 @@
    "metadata": {},
    "source": [
     "# compile model\n",
-    "## Default loss function:\n",
-    "## loss_function = mean squared error"
+    "### Default loss function:\n",
+    "- loss_function = mean squared error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -334,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -352,11 +377,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 45000 samples, validate on 5000 samples\n",
+      "Epoch 1/30\n",
+      "178s - loss: 0.0985 - val_loss: 0.0423\n",
+      "Epoch 2/30\n",
+      "172s - loss: 0.0146 - val_loss: 0.0176\n",
+      "Epoch 3/30\n",
+      "171s - loss: 0.0098 - val_loss: 0.0102\n",
+      "Epoch 4/30\n",
+      "171s - loss: 0.0088 - val_loss: 0.0074\n",
+      "Epoch 5/30\n",
+      "171s - loss: 0.0069 - val_loss: 0.0075\n",
+      "Epoch 6/30\n",
+      "170s - loss: 0.0073 - val_loss: 0.0072\n",
+      "Epoch 7/30\n",
+      "170s - loss: 0.0064 - val_loss: 0.0080\n",
+      "Epoch 8/30\n",
+      "170s - loss: 0.0057 - val_loss: 0.0069\n",
+      "Epoch 9/30\n",
+      "170s - loss: 0.0054 - val_loss: 0.0087\n",
+      "Epoch 10/30\n",
+      "170s - loss: 0.0048 - val_loss: 0.0066\n",
+      "Epoch 11/30\n",
+      "\n",
+      "Epoch 00010: reducing learning rate to 0.00034999998752.\n",
+      "170s - loss: 0.0049 - val_loss: 0.0057\n",
+      "Epoch 12/30\n",
+      "170s - loss: 0.0036 - val_loss: 0.0048\n",
+      "Epoch 13/30\n",
+      "170s - loss: 0.0033 - val_loss: 0.0058\n",
+      "Epoch 14/30\n",
+      "170s - loss: 0.0033 - val_loss: 0.0065\n",
+      "Epoch 15/30\n",
+      "\n",
+      "Epoch 00014: reducing learning rate to 0.00017499999376.\n",
+      "170s - loss: 0.0032 - val_loss: 0.0056\n",
+      "Epoch 16/30\n",
+      "169s - loss: 0.0027 - val_loss: 0.0039\n",
+      "Epoch 17/30\n",
+      "169s - loss: 0.0026 - val_loss: 0.0040\n",
+      "Epoch 18/30\n",
+      "170s - loss: 0.0026 - val_loss: 0.0052\n",
+      "Epoch 19/30\n",
+      "\n",
+      "Epoch 00018: reducing learning rate to 8.74999968801e-05.\n",
+      "174s - loss: 0.0026 - val_loss: 0.0040\n",
+      "Epoch 20/30\n",
+      "170s - loss: 0.0023 - val_loss: 0.0035\n",
+      "Epoch 21/30\n",
+      "\n",
+      "Epoch 00020: reducing learning rate to 8e-05.\n",
+      "168s - loss: 0.0023 - val_loss: 0.0036\n",
+      "Epoch 22/30\n",
+      "170s - loss: 0.0023 - val_loss: 0.0035\n",
+      "Epoch 23/30\n",
+      "165s - loss: 0.0022 - val_loss: 0.0035\n",
+      "Epoch 24/30\n",
+      "168s - loss: 0.0022 - val_loss: 0.0037\n",
+      "Epoch 25/30\n",
+      "170s - loss: 0.0022 - val_loss: 0.0035\n",
+      "Epoch 00024: early stopping\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f83238bb750>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.fit(train_spectra, train_labels, validation_data=(cv_spectra, cv_labels),\n",
     "          epochs=max_epochs, batch_size=batch_size, verbose=2,\n",
@@ -372,16 +472,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved as Model_0\n"
+     ]
+    }
+   ],
    "source": [
     "savename = 'Model_0'\n",
     "model.save(savename+'.h5')\n",
     "print('Model saved as '+savename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
